fix(ui): nav channel name overflow

--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -159,6 +159,7 @@
 		& > .icon {
 			height: 16px;
 			width: 16px;
+			min-width: 16px;
 			margin-right: 4px;
 			filter: invert(0.6);
 		}
